SERVER-22744 dbhash command should check replicated system collections